# atlantix-eda

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
crates/aeda-cli/: Cargo.toml
crates/aeda-cli/src/: main.rs
crates/aeda-cli/src/commands/: config.rs  export.rs  generate.rs  info.rs  init.rs  list.rs  mod.rs  sync.rs
crates/atlantix-core/: Cargo.toml  lib.rs
crates/atlantix-core/ecs/: components.rs  mod.rs
crates/kiparse/: Cargo.toml
crates/kiparse/src/pcb/: detail_parser.rs
examples/: gen_kicad_resistor.rs  gen_resistor.rs  gen_resistor_ecs.rs
outputs/: resistors_0603.csv  resistors_0805.csv
outputs/kicad/Atlantix_Resistors.pretty/: R_0402_1005Metric.kicad_mod  R_0603_1608Metric.kicad_mod  R_0805_2012Metric.kicad_mod  R_1206_3216Metric.kicad_mod  R_1210_3225Metric.kicad_mod  R_2512_6332Metric.kicad_mod
outputs/kicad/footprints.pretty/: R_0402_1005Metric.kicad_mod  R_0603_1608Metric.kicad_mod  R_0805_2012Metric.kicad_mod  R_1206_3216Metric.kicad_mod  R_1210_3225Metric.kicad_mod  R_2512_6332Metric.kicad_mod
outputs/kicad/symbols/: Atlantix_R_0402.kicad_sym  Atlantix_R_0603.kicad_sym  Atlantix_R_0805.kicad_sym  Atlantix_R_1206.kicad_sym  Atlantix_R_1210.kicad_sym  Atlantix_R_2512.kicad_sym  resistors_0402.kicad_sym  resistors_0603.kicad_sym  resistors_0805.kicad_sym  resistors_1206.kicad_sym  resistors_1210.kicad_sym  resistors_2512.kicad_sym
src/: kicad_footprint.rs  kicad_symbol.rs  lib.rs
src/ecs/: resources.rs  systems.rs
src/gui/: mod.rs
test_default/kicad/Atlantix_Resistors.pretty/: R_0603_1608Metric.kicad_mod
test_e48/kicad/footprints.pretty/: R_0805_2012Metric.kicad_mod
test_e48/kicad/symbols/: Atlantix_R_0805.kicad_sym
test_mfr/kicad/Atlantix_Resistors.pretty/: R_0603_1608Metric.kicad_mod
test_output/kicad/footprints.pretty/: R_0603_1608Metric.kicad_mod
test_tolerance/kicad/footprints.pretty/: R_0603_1608Metric.kicad_mod  R_1206_3216Metric.kicad_mod
test_tolerance/kicad/symbols/: Atlantix_R_0603.kicad_sym  Atlantix_R_1206.kicad_sym
