[package]
name    = "atlantix_eda" # the name of the package
version = "0.1.1"    # the current version, obeying semver
edition = "2021"     # use 2021 edition (2024 edition is not yet stable)
authors = ["James <fpga@atlantixeng.com>"]
description = "Programmatically generated libraries for PCB Design."
repository = "https://github.com/saturn77/atlantix-eda.git"

[dependencies]
num-traits = "0.2.14"
fs_extra = "1.2.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
bevy_ecs = "0.14"
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
egui_dock = "0.14"
egui-file-dialog = "0.7"
# egui_logger = "0.5"  # Temporarily disabled due to version conflict
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"


[lib]
name = "component"

[[bin]]
name = "atlantix_eda_gui"
path = "src/bin/gui.rs"

