[workspace]
resolver = "2"
members = [
    "crates/atlantix-core",
    "crates/kiparse",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["James <fpga@atlantixeng.com>"]
license = "MIT"
repository = "https://github.com/Atlantix-EDA/atlantix-eda"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.10"

# Workspace crates
kiparse = { path = "crates/kiparse" }
atlantix-core = { path = "crates/atlantix-core" }
