[package]
name = "aeda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Atlantix EDA CLI - Component library management and generation"

[[bin]]
name = "aeda"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde.workspace = true
serde_json = "1.0"

# File handling
dirs = "5.0"

# Workspace crates
atlantix-core = { path = "../atlantix-core" }
kiparse = { path = "../kiparse" }
