[package]
name = "atlantix-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Programmatically generated libraries for PCB Design"

[dependencies]
num-traits = "0.2.14"
fs_extra = "1.2.0"
chrono.workspace = true
clap = { version = "4.0", features = ["derive"] }
bevy_ecs = "0.14"
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
egui_dock = "0.14"
egui-file-dialog = "0.7"
log = "0.4"
env_logger = "0.11"
serde.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "component"
path = "lib.rs"
